# snake

./: .README.md.swp  .gitignore  Cargo.toml  LICENSE  README.md
snake-core/: Cargo.toml
snake-core/src/: lib.rs
snake-core/src/tests/: test_utils.rs
snake-quicksilver/: Cargo.toml
snake-quicksilver/src/: main.rs
snake-stm32f4discovery/: Cargo.toml  README.md  memory.x  rust_mini.raw
snake-stm32f4discovery/.cargo/: config
snake-stm32f4discovery/src/: display.rs  joystick.rs  leds.rs  main.rs  simple_rng.rs
snake-x86/: Cargo.toml
snake-x86/src/: main.rs
src/: generic_array_adapter.rs  lib.rs
src/tests/: test_utils.rs
