[package]
authors = ["Grzegorz <grzegorz.bartoszek@thaumatec.com>"]
edition = "2018"
readme = "README.md"
name = "snake-stm32f4"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
embedded-hal="*"
embedded-graphics="*"
ssd1331 = "0.1.2"
#rand = { version="0.7", default-features = false, features=[] }
snake = { path = "../snake-core", default-features = false, features=[]}

[dependencies.stm32f4xx-hal]
version = "0.5.0"
features = ["stm32f411", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "snake-stm32f4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
