[package]
name = "snake-x86"
version = "0.1.0"
authors = ["Grzegorz <grzegorz.bartoszek@thaumatec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snake = { path = "../snake-core" }
rand = "0.6.5"
cursive = "0.12"
paste = "0.1"
