[package]
name = "snake-x86"
version = "0.1.0"
authors = ["Grzegorz <grzegorz.bartoszek@thaumatec.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snake = { path = "../snake-core" }
rand = "0.8.5"
cursive = "0.20"
paste = "1.0"
